--- a/css/custom.css
+++ b/css/custom.css
@@ -1,5 +1,48 @@
 
 /* === NAVBAR === */
+#header {
+	-webkit-transition: all 0.1s ease-in;
+	  -o-transition: all 0.1s ease-in;
+	  transition: all 0.1s ease-in;
+	  -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+	  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+	  -moz-transform: translateZ(5px);
+	  -ms-transform: translateZ(5px);
+	  -webkit-transform: translateZ(5px);
+	  transform: translateZ(5px);
+	  position: fixed;
+	  top: 0;
+	  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+	  padding: 30px 0;
+	  width: 100%;
+	  z-index: 9999;
+	  background: url(../images/crossword.png) #fff; }
+	  .basic #header {
+	    background: #fff; }
+	  #header a {
+	    color: #888; }
+	  .admin-bar #header {
+	    top: 32px; }
+	    @media (max-width: 768px) {
+	      .admin-bar #header {
+	        top: 46px; } }
+	    @media (max-width: 600px) {
+	      .admin-bar #header {
+	        top: 0; } }
+	  .shrink-nav #header {
+	    padding: 15px 0; }
+	  #header .container {
+	    position: relative; }
+	  @media (max-width: 600px) {
+	    #header {
+	      position: relative; } }
+	  @media (max-width: 480px) {
+	    #header {
+	      padding: 15px 0; 
+	  }
+	       }
+
+
 #menu-social {
 	overflow: hidden;
 	padding: 7px 0 0 10px;
