--- a/css/custom.css
+++ b/css/custom.css
@@ -65,6 +65,23 @@
     color: #888;
 }
 
+.navbar-toggle {
+    position: absolute;
+    top: 10px;
+    right: 20px;
+    border-color: #ddd;
+    background-color: #eee;
+    margin: 0;
+}
+
+.navbar-toggle .icon-bar + .icon-bar {
+    margin-top: 4px;
+}
+
+.navbar-toggle .icon-bar {
+    background-color: #ddd;
+}
+
 .navbar-nav {
   text-transform: uppercase;
   font-size: 14px; }
